# USINE-SDK-PUBLIC

./: .gitignore  GENERATE SDK.bat  LICENSE  README.md  Release Notes.txt  Set Path example.bat  Set Path senso.bat  desktop.ini  path.txt  pluginwrapper todo.txt
docs/: GENERATE DOC.bat  Sensomusic SDK User's manual v1.1(en).doc
modules/MotionRecognition/: CMakeLists.txt  MotionRecognition.sln  MotionRecognition.vcxproj  MotionRecognition.vcxproj.filters  MotionRecognizer.cpp  MotionRecognizer.h  motion rec.wkp
modules/MotionRecognition/MotionRecognition.xcodeproj/: project.pbxproj
modules/MotionRecognition/MotionRecognition.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
modules/MotionRecognition/MotionRecognition.xcodeproj/project.xcworkspace/xcshareddata/: AudioVolumeExample.xccheckout
modules/MotionRecognition/MotionRecognition.xcodeproj/project.xcworkspace/xcuserdata/basile.xcuserdatad/: UserInterfaceState.xcuserstate
modules/MotionRecognition/MotionRecognition.xcodeproj/project.xcworkspace/xcuserdata/oliviersens.xcuserdatad/: UserInterfaceState.xcuserstate
modules/MotionRecognition/MotionRecognition.xcodeproj/project.xcworkspace/xcuserdata/senso.xcuserdatad/: UserInterfaceState.xcuserstate
modules/MotionRecognition/MotionRecognition.xcodeproj/xcshareddata/xcschemes/: ArrayDelay.xcscheme
modules/MotionRecognition/MotionRecognition.xcodeproj/xcuserdata/basile.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
modules/MotionRecognition/MotionRecognition.xcodeproj/xcuserdata/brainmodularcontact.xcuserdatad/xcschemes/: xcschememanagement.plist
modules/MotionRecognition/process/: DataHelper.h  Handler.cpp  Handler.h  Utils.h
modules/MotionRecognition/test_wkp/: motion_recognition_bulk_test.wkp
sdk/: UserModule.cpp  (+7 more)
(+3627 files in other folders)
